import React from 'react';
import { shallow } from 'enzyme';

import IconButton from './IconButton';
import CountdownButton from '../media/CountdownButton';

import Toast from './Toast';

const renderByType = (type, extraProps) =>
  shallow(<Toast type={type} content={<p>lol</p>} {...extraProps} />);


describe('Toast component', () => {

  it('matches snapshot (info)', () => {
    const component = renderByType('info');
    expect(component).toMatchSnapshot();
  });

  it('matches snapshot (success)', () => {
    const component = renderByType('success');
    expect(component).toMatchSnapshot();
  });

  it('matches snapshot (progress)', () => {
    const component = renderByType('progress');
    expect(component).toMatchSnapshot();
  });

  it('matches snapshot (error)', () => {
    const component = renderByType('error');
    expect(component).toMatchSnapshot();
  });

  it('matches snapshot (warn)', () => {
    const component = renderByType('warn');
    expect(component).toMatchSnapshot();
  });

  it('does NOT render action button if label and action are not passed', () => {
    const component = renderByType('info');
    const actionButton = component.find('[data-test="toast-action"]');
    expect(actionButton).toHaveLength(0);
  });

  it('renders action button if label and action are passed', () => {
    const component = renderByType('info', {
      onAction: () => {},
      actionLabel: 'action',
    });
    const actionButton = component.find('[data-test="toast-action"]');
    expect(actionButton).toHaveLength(1);
  });

  it('does NOT render close button when `canDismiss` set to false', () => {
    const component = renderByType('info', {
      canDismiss: false,
    });
    const closeButton = component.find(CountdownButton);
    expect(closeButton).toHaveLength(0);
  });

  it('does NOT render close button for "progress" toasts', () => {
    const component = renderByType('progress');
    const closeButton = component.find(CountdownButton);
    expect(closeButton).toHaveLength(0);
  });

 it('renders close button by default', () => {
    const component = renderByType('info');
    const closeButton = component.find(CountdownButton);
    expect(closeButton).toHaveLength(1);
  });

  it('uses normal dismiss button when `isAutoDismiss` set to false', () => {
    const component = renderByType('info', {
      isAutoDismiss: false,
    });

    const countdownButton = component.find(CountdownButton);
    const standardButton = component.find(IconButton);
    expect(countdownButton).toHaveLength(0);
    expect(standardButton).toHaveLength(1);
  });
});
