// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast component matches snapshot (error) 1`] = `
<div
  aria-atomic="true"
  aria-relevant="all"
  className="toast toast--error"
  role="alert"
>
  <div
    className="toast-bar"
  />
  <div
    className="toast-content alignChild--left--center"
  >
    <Flex>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <div
            className="toast-icon media--s"
          >
            <div
              className="fontWeight--bold color--white"
              role="image"
            >
              !
            </div>
          </div>
        </div>
      </FlexItem>
      <FlexItem>
        <div
          className="toast-constrainGrowth"
        >
          <p>
            lol
          </p>
        </div>
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <CountdownButton
            duration={4000}
            label="Close"
          />
        </div>
      </FlexItem>
    </Flex>
  </div>
</div>
`;

exports[`Toast component matches snapshot (info) 1`] = `
<div
  aria-atomic="true"
  aria-relevant="all"
  className="toast toast--info"
  role="log"
>
  <div
    className="toast-bar"
  />
  <div
    className="toast-content alignChild--left--center"
  >
    <Flex>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <div
            className="toast-icon media--s"
          >
            <InformationIcon
              color="#4cabce"
              size="l"
            />
          </div>
        </div>
      </FlexItem>
      <FlexItem>
        <div
          className="toast-constrainGrowth"
        >
          <p>
            lol
          </p>
        </div>
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <CountdownButton
            duration={4000}
            label="Close"
          />
        </div>
      </FlexItem>
    </Flex>
  </div>
</div>
`;

exports[`Toast component matches snapshot (progress) 1`] = `
<div
  aria-atomic="true"
  aria-relevant="all"
  className="toast toast--progress"
  role="log"
>
  <div
    className="toast-bar"
  >
    <div
      className="toast-progressBar toast-progressBar--continuous"
    />
  </div>
  <div
    className="toast-content alignChild--left--center"
  >
    <Flex>
      <FlexItem>
        <div
          className="toast-constrainGrowth"
        >
          <p>
            lol
          </p>
        </div>
      </FlexItem>
    </Flex>
  </div>
</div>
`;

exports[`Toast component matches snapshot (success) 1`] = `
<div
  aria-atomic="true"
  aria-relevant="all"
  className="toast toast--success"
  role="log"
>
  <div
    className="toast-bar"
  />
  <div
    className="toast-content alignChild--left--center"
  >
    <Flex>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <div
            className="toast-icon media--s"
          >
            <CheckIcon
              color="#ffffff"
              size="xs"
            />
          </div>
        </div>
      </FlexItem>
      <FlexItem>
        <div
          className="toast-constrainGrowth"
        >
          <p>
            lol
          </p>
        </div>
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <CountdownButton
            duration={4000}
            label="Close"
          />
        </div>
      </FlexItem>
    </Flex>
  </div>
</div>
`;

exports[`Toast component matches snapshot (warn) 1`] = `
<div
  aria-atomic="true"
  aria-relevant="all"
  className="toast toast--warn"
  role="log"
>
  <div
    className="toast-bar"
  />
  <div
    className="toast-content alignChild--left--center"
  >
    <Flex>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <div
            className="toast-icon media--s"
          >
            <div
              className="fontWeight--bold color--white"
              role="image"
            >
              !
            </div>
          </div>
        </div>
      </FlexItem>
      <FlexItem>
        <div
          className="toast-constrainGrowth"
        >
          <p>
            lol
          </p>
        </div>
      </FlexItem>
      <FlexItem
        shrink={true}
      >
        <div
          className="toast-constrainGrowth alignChild--center--center"
        >
          <CountdownButton
            duration={4000}
            label="Close"
          />
        </div>
      </FlexItem>
    </Flex>
  </div>
</div>
`;
